troubleshooting/scenario4-unbound-pvc.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: scenario4-pending-pod
  namespace: taskboard
spec:
  replicas: 1
  selector:
    matchLabels:
      app: scenario4-pending
  template:
    metadata:
      labels:
        app: scenario4-pending
    spec:
      containers:
        - name: app
          image: busybox:latest
          command: ["sh", "-c", "sleep 3600"]
          volumeMounts:
            - name: storage
              mountPath: /data
      volumes:
        - name: storage
          persistentVolumeClaim:
            claimName: scenario4-unbound-pvc
